# pyconvnet

./: .gitignore  Experiments.ipynb  Pipfile  README.md  pyproject.toml  requirements.txt
src/: datasets.py  estimator.py  loss.py  main.py  network.py  utils.py
src/layers/: __init__.py  baselayer.py  conv.py  fc.py  flatten.py  inputl.py  nonlinearities.py  pool.py  vector.py
src/optimizers/: minibatchgd.py
src/pyconvnet/: network.py
src/pyconvnet/layers/: __init__.py  baselayer.py  inputl.py  nonlinearities.py
src/pyconvnet/optimizers/: __init__.py  minibatchgd.py
src/pyconvnet/utils/: transforms.py
src/pynet/: datasets.py  estimator.py  loss.py  main.py  network.py
src/pynet/layers/: conv.py  fc.py
src/utils/: vector.py
